--- a/index.html
+++ b/index.html
@@ -4,24 +4,64 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <link rel="stylesheet" href="css/style.css">
+
+  <title>Vue ToDoList</title>
 </head>
 <body>
   
-  <div id="app">
+  <div id="app"  class="container">
 
-    <header></header>
+    <header>
 
-    <main></main>
+      <div class="title text-uppercase text-center" >
+        <h1 class="mb-4">ToDoList - Lista Obiettivi</h1>
+      </div>
+
+    </header>
+
+    <main>
+      <div class="text-center">
+
+        <input v-model="newTarget" placeholder="Inserisci obiettivo"></input>
+        <button @click="addTarget()">Aggiungi</button>
+
+      </div>
+
+      <div class="target-list ">
+
+        
+        <div class="target">
+          <ul >
+            <li class="d-flex justify-content-between align-content-center mt-2"
+                v-for="(target, index) in targets">
+              {{target.text}}
+
+              <i @click="removeTarget(index)" class="fa-regular fa-circle-xmark"></i>
+            </li>
+          </ul>
+        </div>
+        
+
+      </div>
+
+
+    </main>
 
     <footer></footer>
-
-    <script src="js/script.js"></script>
-
   </div>
+
+  <script src="js/script.js"></script>
+
 
 </body>
 </html>
